--- a/backend/package.json
+++ b/backend/package.json
@@ -22,10 +22,17 @@
   "dependencies": {
     "@line/bot-sdk": "^10.6.0",
     "@nestjs/common": "^11.0.1",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/jwt": "^11.0.2",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
     "@prisma/client": "^6.19.2",
     "axios": "^1.13.2",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "passport-line": "^0.0.4",
+    "passport-oauth2": "^1.8.0",
     "prisma": "^6.19.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
@@ -39,6 +46,7 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^30.0.0",
     "@types/node": "^22.10.7",
+    "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
